[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/kenney_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/menu_button/menu_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://credits/scripts/credits.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Credits" type="Spatial"]
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 517.0
margin_top = 297.0
margin_right = 1402.0
margin_bottom = 782.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarsLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 885.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "Stars Collected: 100/100"
align = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 885.0
margin_bottom = 187.0
custom_fonts/font = SubResource( 2 )
text = "
Thanks for playing!"
align = 1

[node name="Label4" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 191.0
margin_right = 885.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 1 )
text = "
Models and audio by kenney"
align = 1

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 885.0
margin_bottom = 306.0
custom_fonts/font = SubResource( 1 )
text = "programming by robthefivenine"
align = 1

[node name="Label5" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 310.0
margin_right = 885.0
margin_bottom = 391.0
custom_fonts/font = SubResource( 3 )
text = "

https://robthefivenine.itch.io/
https://kenney.nl/"
align = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 395.0
margin_right = 885.0
margin_bottom = 485.0
rect_min_size = Vector2( 0, 90 )

[node name="MainMenuButton" parent="CenterContainer/VBoxContainer/Control" instance=ExtResource( 2 )]
margin_left = -174.0
margin_top = -3.8147e-06
margin_right = 212.5
margin_bottom = 90.0
text = "BACK TO MAIN MENU"

[node name="TransitionOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeOut = SubResource( 4 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/Control/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
